lang/macro/tests/ui/fail/M-10-method-unknown-ink-marker.stderr
error: unknown ink! marker
  --> $DIR/M-10-method-unknown-ink-marker.rs:17:14
   |
17 |         #[ink(unknown_marker)]
   |              ^^^^^^^^^^^^^^^^
